--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <div>
        <input placeholder="Enter Task" type="text" id="todo-task">
        <button onclick="addTodo()">Add Task</button>
+       <button onclick="deleteAll()">Remove All Tasks</button>
    </div>
 
    <ul id="list">
