--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div>
+        <h1>Welcome to Task Manager - To Do Application</h1>
+    </div>
    <div>
        <input placeholder="Enter Task" type="text" id="todo-task">
        <button onclick="addTodo()">Add Task</button>
